# muchstuff

./: LICENSE  Makefile  README.md  noxfile.py  pyproject.toml
src/: __main__.py  _debug.py  git.py  manager.py  mercurial.py  repos.py  repos.tcss  tui.py  tui.tcss  vcs.py
src/muchstuff/: __init__.py  __main__.py  _debug.py  main.py  manager.py  tui.py
